# Icey

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  build.bat  build.ps1  devtools_options.yaml  flutter_launcher_icons.yaml  pubspec.yaml  screenshot.bat  splash_options.yaml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-反馈.yml  功能请求.yml
.github/workflows/: build.yml  ios.yml  linux_x64.yml  mac.yml  win_x64.yml
android/: gradle.properties
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_window_listener.dart  build_config.dart  controller.dart  main.dart  main.g.dart  state.dart  t.dart
lib/constants/: box_key.dart  cache_key.dart  glass_settings.dart  settings.dart  strings.dart
lib/entities/: album.dart  artist.dart  artwork_color.dart  media.dart  media_order.dart
lib/event_bus/: event_bus.dart
lib/extensions/: window_controller_extension.dart
lib/helpers/: common.dart  dominant_color.dart  image.dart  platform.dart  throttle.dart
lib/http/: init.dart
lib/init/: catcher.dart  desktop.dart  hive.dart  services.dart
lib/permission/: audio.dart
lib/router/: router.dart
lib/services/: audio_service.dart  audio_service_windows.dart  audio_session.dart  custom_shuffle_order.dart  media_service.dart  media_state.dart  play_mode.dart
lib/theme/: theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
plugins/audio_metadata_reader/: CHANGELOG.md  pubspec.yaml
plugins/audio_query/: README.md  pubspec.yaml
plugins/audio_service_win/: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
plugins/lyric/: pubspec.yaml
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  smtc_flutter.rs  tag_reader.rs  utils.rs
rust/src/api/lyric_parser/: api.rs  ass.rs  eslrc.rs  lrc.rs  lys.rs  mod.rs  qrc.rs  ttml.rs  utils.rs  yrc.rs
rust/src/api/lyric_parser/ttml/: write.rs
rust/src/api/lyric_parser/ttml/read/: mod.rs  parser.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+366 files in other folders)
