[package]
name = "rust_lib_icey"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
default = ["ass", "lrc", "yrc", "qrc", "lys", "eslrc", "ttml", "eqrc", "serde"]
ass = []
lrc = ["dep:nom"]
yrc = ["dep:nom"]
qrc = ["dep:nom"]
lys = ["dep:nom"]
eslrc = ["dep:nom", "lrc"]
ttml = ["dep:quick-xml", "dep:thiserror", "dep:nom"]
eqrc = ["dep:miniz_oxide"]
serde = ["dep:serde"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
lofty = "0.21.1"
serde_json = "1.0.117"
phf = { version = "0.11", features = ["macros"] }
anyhow = "1.0.86"
ttf-parser = "0.24.1"
image = "0.25.2"

# 歌词解析
nom = { version = "^8.0", optional = true }
serde = { version = "^1.0", features = ["derive"], optional = true }
cipher = { version = "0.4", optional = true }
miniz_oxide = { version = "^0.8", optional = true }
quick-xml = { version = "^0.38", optional = true }
thiserror = { version = "^2", optional = true }
# rayon = { version = "^1.7", optional = true }

# 仅在 Windows 平台启用 Windows API 依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.57.0", features = [
    "Media_Playback",
    "Storage",
    "Storage_Streams",
    "Storage_FileProperties",
    "Storage_Pickers",
    "Foundation",
    "Foundation_Collections",
    "System",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "UI_ViewManagement",
]}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
